Generate either Java code or Xtend code for overridden classes (#93)
* fix NullPointerException in GMACompliant

* Add possibility to choose Java or Xtend as overridden impl classes

* Add unit tests for generation of overriden impl as Xtend